--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="row">
       <div class="page-header">
-        <h1>Tweetbot</h1>
+        <img src='logo.png' class="logo"><h1>Tweetbot</h1>
         <div class="tabs">
           <div ui-sref="main" ng-class="{'activeTab': currentState === 'main'}">Generate</div>
           <div ui-sref="chats" ng-class="{'activeTab': currentState === 'chats'}">View All</div>
